compilateurDeca/src/test/deca/context/valid/sans_objet/arithmetic/add_int_float.deca
// Description:
//    Sans-Objet
//    Affectation
//  
//
// Resultats:
//    compilation bonne
//        
// 
// Historique:
//    cree le 06/01/2026

{
    int a = 1 ;
    float b = 2.0;

    b = b + a;

}